Fix issues related to flexbox on safari and firefox and change CHelper.compare to compare with a delta

--- a/css/fontawesome.css
+++ b/css/fontawesome.css
@@ -16,7 +16,6 @@
     font-family: 'fontello';
     font-size: 3em;
     font-style: normal;
-
     speak: none;
 }
 
@@ -47,9 +46,19 @@
     position: relative;
     width: 240px;
     height: 226px;
+    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;      /* TWEENER - IE 10 */
+    display: -webkit-flex;     /* NEW - Chrome */
     display: flex;
+
+    flex-direction: column;
+     -webkit-flex-direction: column;
+
     align-items: center;
+    -webkit-align-items: center;
     justify-content: center;
+    -webkit-justify-content: center;
 }
 
 .nav a
